introduced more routes for server various handlebars files

--- a/index.html
+++ b/index.html
@@ -25,37 +25,14 @@
     </nav>
 
     <main>
-        <div class="login-section">
-            <div class="login-card card">
-                <h2 class="title">Login</h2>
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
+        <div class="card">
+            <div class="card-header">
+              Featured
             </div>
-
-            <div class="login-card card">
-                <h2 class="title">Sign Up</h2>
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
-                </form>
+            <div class="card-body">
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
-        </div>
+          </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
