--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="./public/js/login.js"></script>
 </body>
 </html>
